--- a/src/app/layout/layout.variables.css
+++ b/src/app/layout/layout.variables.css
@@ -1,19 +1,52 @@
 :root {
-    --layout-border-color:                lightgrey;
-    --layout-global-bg-color:             #f9f8fb;
+  --page-global-bg-color:             transparent;
 
-    --page-max-width:                     1280px;
-    --page-min-width:                     320px;
+  --page-max-width:                     1280px;
+  --page-min-width:                     320px;
 
-    --page-gutter:                         30px;
-    --page-gutter--md:                     60px;
-    --page-gutter--xl:                     90px;
+  --page-gutter:                        30px;
+  --page-gutter--md:                    60px;
+  --page-gutter--xl:                    90px;
 
-    /* =Z-index's
+  /* =Gutter
 ----------------------------------------------- */
-    --zindex--modal:                      5000;
-    --zindex--overlay:                    4000;
-    --zindex--dropDown:                   3000;
-    --zindex--header:                     2000;
-    --zindex--footer:                     1000;
+  --global-gutter:                      50px;
+  --global-gutter--secondary:           25px;
+
+  /* =Header
+----------------------------------------------- */
+  --Header-height:                      60px;
+  --Header-logo-height:                 40px;
+  --Header-logo-width:                  40px;
+
+  /* =Footer
+----------------------------------------------- */
+  --Footer-height:                      90px;
+  --Footer-content-height:              50px;
+
+  /* =Media queries breakpoints
+----------------------------------------------- */
+  --viewport--xxs:                      320px;
+  --viewport--xs:                       481px;
+  --viewport--sm:                       600px;
+  --viewport--md:                       768px;
+  --viewport--lg:                       980px;
+  --viewport--xl:                       1240px;
+
+  /* =Z-index's
+----------------------------------------------- */
+  --zindex--modal:                      5000;
+  --zindex--overlay:                    4000;
+  --zindex--dropDown:                   3000;
+  --zindex--header:                     2000;
+  --zindex--footer:                     1000;
 }
+
+/* =Media queries declarations
+----------------------------------------------- */
+@custom-media --xxs (min-width: 320px);
+@custom-media --xs (min-width: 481px);
+@custom-media --sm (min-width: 600px);
+@custom-media --md (min-width: 768px);
+@custom-media --lg (min-width: 980px);
+@custom-media --xl (min-width: 1240px);
